tests/NormalTests/paczka1/fuzzy1/99008756.err
Error in line 4: S252 S240 54,2
Error in line 13: 3J18w53It S693 57,3
Error in line 22: JATJ S252 95,58
Error in line 27: XXdXY52tk S754 24,1
Error in line 29: QSe S754 64,5
Error in line 23: 3J18w53It S693 31,7
Error in line 33: 3J18w53It S754 53,7
Error in line 31: C3ihpJ S693 93,2
